finished the home page
in this part I finished the nav bar and home page design so the next is about page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   <!-- title of website-->
+    <title>Portfolio | Issam Elasri</title>
+     <!-- icon in the top of tab browser-->
+    <link rel="icon" href="img/logo_icon.png">
+    <!--link the css with html-->
+    <link rel="stylesheet" href="css/styles.css">
+    <!--link with the font used in the project-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
+ <header>
+    <!--the nav bar and its elements-->
+    <nav class="container">
+        <a href="#" class="=logo"><img src="img/logo.png"  alt=""></a>
+        <div class="links">
+           <a href="#">Home</a> 
+           <a href="#">about</a>
+           <a href="#">Media</a>
+           <a href="#">Contact</a>
+        </div>
+        <div class="icons">
+            <a href="#"><i class="fa-brands fa-tiktok"></i></a> 
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        </div>
+    </nav>
+ </header>
+ <!-- I put here the intro and image in div and two btn-->
+   <div class="issam">
+    <div class="container"> 
 
+
+        <div class="div_text">
+            <h4>Hello I'm</h4>
+            <h1><span>Issam E.</span></h1>
+            <h2>English Teacher</h2>
+            <p>I can make your language learning experience enjoyable and fulfilling, 
+                no matter your level of experience or goal of fluency. 
+                Come with me as we travel on this journey to realize your greatest English language ability!</p>
+                <div class="btns">
+                    <a href="#" class="btn">Hire me</a>
+                    <a href="#" class="btn_nobg">Download resume</a>
+                </div>
+            </div>
+      
+ <div class="div_img">
+        <img src="img/home.png" class="person" alt="">
+        <img src="img/bg_img_home.png" alt="" class="bg_img">
+    </div>
+    </div>
+   </div>
+   <!-- the end of class issam that contain intro,two btn and image home-->
 </body>
 </html>
