finished about section
and fixed the header prob by add active class by js code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
+    
  <header>
+   
     <!--the nav bar and its elements-->
     <nav class="container">
         <a href="#" class="=logo"><img src="img/logo.png"  alt=""></a>
@@ -55,5 +57,34 @@
     </div>
    </div>
    <!-- the end of class issam that contain intro,two btn and image home-->
+    <section class="about">
+        <div class="container">
+            <div class="div_text">
+                <h5>about me</h5>
+                <h2><span> I'm an English Teacher</span></h2>
+                <h4>I teach students from different backgrounds and levels</h4>
+                <p>
+                    As a certified TESOL teacher, I bring effective
+teaching strategies and extensive experience to
+the classroom. Over the past few years, I have
+successfully helped students of diverse
+backgrounds and skill levels achieve their
+language goals.
+
+                    <ul>
+                        <li><i class="fa-solid fa-check"></i>exam preparation</li>
+                        <li><i class="fa-solid fa-check"></i>Progress Tracking</li>
+                        <li><i class="fa-solid fa-check"></i>Interactive Methods</li>
+                        <li><i class="fa-solid fa-check"></i>Communication Sessions</li>
+                    </ul>
+                    <a href="img/CV.pdf"  class="btn"> Join me</a>
+                </p>
+            </div>
+            <div class="div_img">
+                <img src="img/about.jpg" alt="">
+            </div>
+        </div>
+    </section>
+    <script src="js/main.js"></script>
 </body>
 </html>
