I finished the design
the next step is the responsive

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="links">
            <a href="#">Home</a> 
            <a href="#">about</a>
+           <a href="#">services</a>
            <a href="#">Media</a>
            <a href="#">Contact</a>
         </div>
@@ -85,6 +86,119 @@ language goals.
             </div>
         </div>
     </section>
+    <section class="media">
+        <div class="container">
+            <div class="top_media">
+                <h2>Our <span> Services</span></h2>
+            </div>
+
+            <div class="boxes">
+                <!--box one for online service-->
+                <div class="box">
+                    <i class="fa-solid fa-earth-americas"></i>
+                    <h3>Online Tutoring</h3>
+                    <p>One-on-One Sessions Provide personalized online tutoring for students
+                         who prefer flexible learning options.</p>
+                    <a href="#" class="btn">Book now</a>
+                </div>
+                <!--box one for Exam Preparation service-->
+                <div class="box">
+                    <i class="fa-solid fa-graduation-cap"></i>
+                    <h3>Exam Preparation</h3>
+                    <p>ELTS, TOEFL, and Cambridge Exam Prep
+                         Provide targeted preparation courses for standardized English tests,
+                          including practice exams and strategies.</p>
+                    <a href="#" class="btn">Book now</a>
+                </div>
+                <!--box one for Conversational English service-->
+                <div class="box">
+                    <i class="fa-solid fa-comments"></i>
+                    <h3>Conversational English</h3>
+                    <p>Speaking Clubs Organize conversation groups
+                         to help students practice speaking in a relaxed environment.</p>
+                    <a href="#" class="btn">Book now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+<!-- in the section I will put my media and projects-->
+ <section class="projects">
+    <div class="container">
+        <div class="top_media">
+        <h2>Explore my Teaching <span> Methods</span></h2>
+        </div>
+        <!--project box with all elements-->
+        <div class="project_box">
+            <img src="img/project1.jpg" alt="">
+            <di class="text">
+                <h4><span>Online tutoring</span></h4>
+                <h3><a href="#">Teach my 7 year-old student</a></h3>
+                <p>In this lesson I taught her some vocabulary sports</p>
+                <a href="" class="link"><i class="fa-brands fa-youtube"></i></i></a>
+            </di>
+        </div>
+        <!--project box with all elements-->
+        <div class="project_box right_side">
+            <img src="img/project1.jpg" alt="">
+            <di class="text">
+                <h4><span>Online tutoring</span></h4>
+                <h3><a href="#">Teach my 7 year-old student</a></h3>
+                <p>In this lesson I taught her some vocabulary sports</p>
+                <a href="" class="link"><i class="fa-brands fa-youtube"></i></i></a>
+            </di>
+        </div>
+        <!--project box with all elements-->
+        <div class="project_box">
+            <img src="img/project1.jpg" alt="">
+            <di class="text">
+                <h4><span>Online tutoring</span></h4>
+                <h3><a href="#">Teach my 7 year-old student</a></h3>
+                <p>In this lesson I taught her some vocabulary sports</p>
+                <a href="" class="link"><i class="fa-brands fa-youtube"></i></i></a>
+            </di>
+        </div>
+        <!--project box with all elements-->
+        <div class="project_box right_side">
+            <img src="img/project1.jpg" alt="">
+            <di class="text">
+                <h4><span>Online tutoring</span></h4>
+                <h3><a href="#">Teach my 7 year-old student</a></h3>
+                <p>In this lesson I taught her some vocabulary sports</p>
+                <a href="" class="link"><i class="fa-brands fa-youtube"></i></i></a>
+            </di>
+        </div>
+
+    </div>
+ </section>
+ <!--will work know on contact layout-->
+ <section class="contact" id="contact">
+    <div class="top_media">
+        <h2>Contact <span> Me</span></h2>
+    </div>
+    <di class="container">
+        <div class="social_contact">
+            <h2>Follow me</h2>
+            <div class="links">
+                <a href="mailto:example@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i>Gmail</a>
+                <a href="https://www.instagram.com/issam.elasri91/" target="_blank"><i class="fa-brands fa-square-instagram"></i>Instagram</a>
+                <a href="https://web.facebook.com/profile.php?id=100084811278427" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
+                <a href="tel:+212609237034"><i class="fa-brands fa-square-whatsapp"></i>Whatsaap</a>
+                <a href="https://www.youtube.com/@issamelasri6739" target="_blank"><i class="fa-brands fa-youtube"></i>Youtube</a>
+            </div>
+        </div>
+        <form action="">
+            <div class="inpts_form">
+                <input type="text" placeholder="full name">
+                <input type="text" placeholder="email">
+                <input type="text" placeholder="number">
+                <input type="text" placeholder="subject">
+                <textarea name="" id="" rows="10" placeholder=" write your message here"></textarea>
+            </div>
+            <button class="btn">Send message</button>
+        </form>
+    </di>
+ </section>
     <script src="js/main.js"></script>
 </body>
 </html>
